feat: Implement constructor search, optimize driver stats calculation, and add health check pages with new assets.